manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-wil42
  namespace: dev
spec:
  type: NodePort
  selector:
    app: wil42
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 8888
